# dojo

./: csvparser.py  hilbert.py  romans.py  romansTest.py  romans_inc.py  romparser.dot  romparser.py
99Problems/: 99Problems.cabal  Dojo.hs  Main.hs
acceptors/: pom.xml
acceptors/src/main/java/de/markusrother/acceptors/: AbstractAcceptorCompound.java  Acceptor.java  Concatenation.java  PositiveClosure.java  SingleItemAcceptor.java  Union.java
automata/: pom.xml
codewars/: counting_change_combinations.py  explosive_sum.py
codewars/go/: README.md  main  main.go
codewars/haskell/: Balanced.hs  Bowling.hs  CalculatingWithFunctions.hs  Dups.hs  ExpandedNumber.hs  Green.hs  LinearSequence.hs  MoleculeToAtoms.hs  PiApprox.hs  RPN.hs  SlidingPuzzleWorker.hs  Snail.hs  Spiral.hs
codewars/java/: SweepingTrees.java
codewars/python/: appointment.py  calculator.py  checking_groups.py  football.py  integer_to_english.py  iq_test.py  local_maxima.py  loose_change.py  loose_change_part2.py  memoized_fibs.py  pyramid_slide_down.py  recoverSecret.py  rot13.py  simplify_poly.py  spiralize.py  suzuki.py  tic_tac_toe.py  tic_tac_toe_2015.py  tiny_compiler.py  water_pouring_problem.py
rosalind/haskell/: Graphs.hs  Populations.hs  Sorting.hs
rosalind/python/: Pipfile
rosalind/python/lib/: cartesian.py  partition.py
rosalind/python/src/: cons.py  dna.py  fibd.py  fibs.py  gc.py  grph.py  hamm.py  iev.py  iprb.py  lcsm.py  orf.py  parsers.py  perm.py  prot.py  prtm.py  revc.py  revp.py  revp_v1.py  revp_v2.py  rna.py  subs.py  util.py
(+43 files in other folders)
