cabal-version:      2.4
name:               99Problems
version:            0.1.0.0
author:             Markus Rother
maintainer:         mail@markusrother.de

Library
    build-depends:    base ^>=4.15.0.0,
                      containers >= 0.6.4.1,
                      random >= 1.2.1
    hs-source-dirs:   .
    default-language: Haskell2010
